[tool.poetry]
name = "tessif"
version = "0.0.16"
description = "Transforming Energy Supply System modell*I*ng Framework"
authors = ["Mathias Ammon <mathias.ammon@tuhh.de>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/tZ3ma/tessif"
homepage = "https://github.com/tZ3ma/tessif"
keywords = ["energy technology", "energy supply systems"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
nox-poetry = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.3.2"}
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.4.25"
flake8-isort = "^4.1.1"
flake8-docstrings = "^1.6.0"
xdoctest = "^1.0.0"
Sphinx = "^4.5.0"
pep8-naming = "^0.12.1"
pyupgrade = "^2.32.1"
sphinx-paramlinks = "^0.5.2"
pylint = "^2.14.5"
nox = "^2022.8.7"


[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["tessif"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks tests as end 2 end  (deselect with '-m \"not e2e\"')",
    "con: marks tests as connectivity  (deselect with '-m \"not con\"')",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
